tests/ui/parser/misspelled-keywords/assoc-type.stderr
error: expected one of `!` or `::`, found `Result`
  --> $DIR/assoc-type.rs:2:10
   |
LL | trait Animal {
   |              - while parsing this item list starting here
LL |     Type Result = u8;
   |          ^^^^^^ expected one of `!` or `::`
LL |
LL | }
   | - the item list ends here

error: aborting due to 1 previous error

